[package]
name = "texlab-citeproc"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bibutils = { path = "../bibutils" }
citeproc = { git = "https://github.com/MetaDark/citeproc-rs", rev = "c59eadfe944734400478aeeb2d2dda6f6bee68fd" }
citeproc-db = { git = "https://github.com/MetaDark/citeproc-rs", rev = "c59eadfe944734400478aeeb2d2dda6f6bee68fd" }
citeproc-io = { git = "https://github.com/MetaDark/citeproc-rs", rev = "c59eadfe944734400478aeeb2d2dda6f6bee68fd" }
csl = { git = "https://github.com/MetaDark/citeproc-rs", rev = "c59eadfe944734400478aeeb2d2dda6f6bee68fd" }
fnv = "1.0.3"
html2md = "0.2.9"
itertools = "0.8.2"
lalrpop-util = "0.17.2"
once_cell = "1.2.0"
regex = "1.3.1"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.44"
texlab-protocol = { path = "../texlab_protocol" }
texlab-syntax = { path = "../texlab_syntax" }

[build-dependencies]
lalrpop = "0.17.2"
